# mappable-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mappable.cabal
docs/: Data-Bag.html  Data-Mappable.html  doc-index.html  index.html  mappable.haddock
src/Data/: Bag.hs  Mappable.hs
