cabal-version:      2.4
name:               mappable
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:
--     Mappable is a Haskell Library to make haskell structures like Sets and Map mappable which are not really functors.
--     It also provides a Bag data structure that is implemented using Data.Map.Strict

-- A longer description of the package.
description:
    Mappable is a Haskell Library to make haskell structures like Sets and Map mappable which are not really functors.
    It also provides a Bag data structure that is implemented using Data.Map.Strict

-- A URL where users can report bugs.
bug-reports:        https://github.com/Sinha-Ujjawal/Mappable/issues

-- The license under which the package is released.
license:            MIT
author:             Sinha-Ujjawal
maintainer:         https://github.com/Sinha-Ujjawal

-- A copyright notice.
copyright:          MIT
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Mappable,
                      Data.Bag

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    
    build-depends:    base ^>=4.15.0.0,
                      containers ^>=0.6.4.1,

    hs-source-dirs:   src
    
    default-language: Haskell2010
